# Multimedia-Chat-Client

./: .gitignore  Dockerfile  README.md  README.org  docker-compose.yml  pyproject.toml
server/: README.org  __main__.py  libmessage.py
server/tutorials/: app-server.py  libserver.py  multiconn-server.py
src/Client/: Client.java  ClientConnectionHandler.java  Controller.java  Main.java  chat.fxml  image.fxml
src/Client/chat/: ClientController.java  chatUI.fxml
src/Client/image/: image.fxml  imageController.java
src/Client/menu/: MenuController.java  menu.fxml
src/server/: ClientConnectionHandler.java  Server.java
src/server/assets/: Messages.java  Types.java  Users.java
